Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Software Development</title>
     <div class="container-fluid">
         <nav class="navbar navbar-inverse">
-            <a class="navbar-brand" href="Index.html">Home</a>
+            <a class="navbar-brand" href="index.html">Home</a>
             <a class="navbar-brand" href="Methods.html">Types of Methodologies</a>
         </nav>
     </div>
