--- a/Methods.html
+++ b/Methods.html
@@ -12,8 +12,8 @@
     </div>
     <style>
         img{
-            height: 350px;
-            width: 350px;
+            height: auto;
+            width: auto;
         }
         body{
             background-color: dimgrey;
