--- a/Methods.html
+++ b/Methods.html
@@ -13,7 +13,7 @@
     <style>
         img{
             height: auto;
-            width: auto;
+            max-width: 100%;
         }
         body{
             background-color: dimgrey;
