--- a/Methods.html
+++ b/Methods.html
@@ -13,7 +13,7 @@
     <style>
         img{
             height: auto;
-            max-width: 100%;
+            max-width: 250px;
         }
         body{
             background-color: dimgrey;
